Title merging, titles localization & data simpl.
